<resources>
    <string name="app_name">Astro Weather</string>
    <string name="action_settings">Settings</string>
    <string name="moon">Księżyc</string>
    <string name="sun">Słońce</string>
    <string name="views_current_time">Views current time</string>
    <string name="exit_without_saving">Wyjdź bez zapisywania</string>
    <string name="exit_and_save">Zapisz i wyjdź</string>
    <string name="longitude">Długość</string>
    <string name="latitude">Szerokość</string>
    <string name="settings">Ustawienia</string>
    <string name="select_update_time">Wybierz czas aktualizacji danych astronomicznych:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunrise">Wschód:</string>
    <string name="moonset">Zachód:</string>
    <string name="nearest_new_moon">Najbliższy nów:</string>
    <string name="nearest_full_moon">Najbliższa pełnia:</string>
    <string name="illumination">Widoczność:</string>
    <string name="moon_age">Lunacja:</string>
    <string name="forecast">Prognoza pogody</string>
    <string name="pogodny_prezenter">Pogodny prezenter</string>
    <string name="sunset">Zachód:</string>
    <string name="twilight_morning">Świt cywilny:</string>
    <string name="twilight_sunset">Zmierzch cywilny:</string>
    <string name="basic_weather">Podstawowa Pogoda</string>
    <string name="city_name">Nazwa Miasta</string>
    <string name="lat_and_long">Szerokość I Długość</string>
    <string name="temperature">Temperatura</string>
    <string name="pressure">Ciśnienie</string>
    <string name="has_connection">Has connection</string>
    <string name="current_weather_image">current weather image</string>
    <string name="cityname">cityName</string>
    <string name="refresh">Refresh</string>
    <string name="additional_information">Dodatkowe Informacje</string>
    <string name="wind_speed">Szybkość Wiatru</string>
    <string name="wind_deg">Kierunek Wiatru</string>
    <string name="visibility">Widoczność</string>
    <string name="clouds">Zachmurzenie</string>
    <string name="humidity">Wilgotność</string>
    <string name="date">Data</string>
</resources>
