<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.astroweather.MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/has_connection"
          android:title="@string/has_connection"
          android:orderInCategory="50"
          android:icon="@drawable/offline"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/refresh"
          android:title="@string/refresh"
          android:orderInCategory="0"
          android:icon="@drawable/refresh_icon"
          app:showAsAction="ifRoom"/>
</menu>
